namespace KalanMoney.Domain.UseCases.OpenAccount;

public interface IOpenAccountOutput
{
    public void Results(OpenAccountResponse openAccountResponse);
}